--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: zero_waste
-description: "A new Flutter project."
+name: "zero_waste_chef"
+description: "Not your normal Receipe App"
 publish_to: 'none'
 version: 0.1.0
 
@@ -16,6 +16,23 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/inter.ttf
+
+
+flutter_launcher_icons:
+  image_path: "assets/icon/final_icon.png"
+  android: true
+  ios: false
+  web: 
+    generate: true
+  windows: 
+    generate: true
+  macos:
+    generate: false
