--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "zero_waste" "\0"
+            VALUE "CompanyName", "com.example.zeroWaste" "\0"
+            VALUE "FileDescription", "Not your normal Receipe App" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "zero_waste" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "zero_waste.exe" "\0"
-            VALUE "ProductName", "zero_waste" "\0"
+            VALUE "InternalName", "zeroWasteChef" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.stillUnknown.zeroWaste All rights reserved." "\0"
+            VALUE "OriginalFilename", "zeroWaste Chef.exe" "\0"
+            VALUE "ProductName", "zeroWaste Chef" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
